# alamode

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  ChangeLog.md  LICENSE.txt  README.md  alamode.sln  alm.sln  alm_c++.sln  index.html  params.json
alm/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.osx  Makefile.osx_clang  alamode.cpp  alamode.h  alm.cpp  alm.h  alm.vcxproj  alm.vcxproj.filters  alm_cui.cpp  alm_cui.h  cluster.cpp  cluster.h  combination.h  constraint.cpp  constraint.h  error.cpp  error.h  ewald.cpp  ewald.h  fcs.cpp  fcs.h  files.cpp  files.h  fitting.cpp  fitting.h  input.cpp  input.h  input_parser.cpp  input_parser.h  input_setter.cpp  input_setter.h  interaction.cpp  interaction.h  listcomparison.h  main.cpp  memory.cpp  memory.h  (+20 more)
alm_c++/: Makefile  alamode.cpp  alamode.h  alm.cpp  alm_c++.vcxproj  alm_c++.vcxproj.filters  combination.h  constants.h  constraint.cpp  constraint.h  error.cpp  error.h  ewald.cpp  ewald.h  fcs.cpp  fcs.h  files.cpp  files.h  fitting.cpp  fitting.h  input.cpp  input.h  interaction.cpp  interaction.h  interactions.h  listcomparison.h  main.cpp  mathfunctions.h  memory.cpp  memory.h  mics.cpp  patterndisp.cpp  patterndisp.h  pointers.h  symmetry.cpp  symmetry.h  system.cpp  system.h  timer.cpp  timer.h  (+2 more)
analyzer/: analyze_phonons.cpp  analyze_phonons.h  analyze_phonons.py  analyzer.vcxproj  analyzer.vcxproj.filters
anphon/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.osx  Makefile.osx_clang  Makefile.osx_gcc  anharmonic_core.cpp  anharmonic_core.h  anphon.vcxproj  anphon.vcxproj.filters  conductivity.cpp  conductivity.h  dielec.cpp  dielec.h  dynamical.cpp  dynamical.h  error.cpp  error.h  ewald.cpp  ewald.h  fcs_phonon.cpp  fcs_phonon.h  gruneisen.cpp  gruneisen.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  isotope.cpp  isotope.h  iterativebte.cpp  iterativebte.h  kpoint.cpp  kpoint.h  main.cpp  memory.cpp  memory.h  mode_analysis.cpp  mode_analysis.h  mpi_common.cpp  (+30 more)
docs/: .gitignore  Makefile  make.bat
docs/source/: alm_root.rst  anphon_root.rst  conf.py  download.rst  faq.rst  index.rst  install.rst  install_withHDF5.rst  intro.rst  output.rst  quickstart.rst  tutorial.rst
docs/source/almdir/: formalism_alm.rst  inputalm.rst  outputalm.rst
docs/source/anphondir/: formalism_anphon.rst  inputanphon.rst  outputanphon.rst
docs/source/formalism/: formalism_alm.rst  formalism_anphon.rst
docs/source/input/: inputalm.rst  inputanphon.rst
docs/source/tutorial_pages/: 01_silicon.rst  02_silicon_lammps.rst  bto_ifc.rst  bto_scph_relax.rst  pbte_nonanalytic_correction.rst  silicon.rst  silicon_ifc.rst  silicon_lammps.rst  sto_scph.rst  zno_qha_relax.rst
example/BAs/: BAs.4ph.result  BAs.kl_iter  anphon.in  anphon.out
example/BaTiO3/reference/: cBTO222_harmonic.xml
example/BaTiO3/scph_relax/: plot_free_energy.plt
example/PbTe/: PbTe_anharm444.xml.bz2  PbTe_harm444.xml  make_newfc2.sh  makedisp_vasp.py  scph.in
example/PbTe/reference/: ALM0.in  ALM1.in  DFSET_harmonic  PbTe.born  PbTe_NA0.bands  PbTe_NA1.bands  PbTe_NA2.bands  PbTe_NA3.bands  PbTe_scph4-4.scph_bands.bz2  PbTe_scph4-4.scph_dfc2.bz2  PbTe_scph4-4.scph_dos.bz2  PbTe_scph4-4.scph_dymat.bz2  PbTe_scph4-4.scph_fc2_correction.bz2  PbTe_scph4-4.scph_msd.bz2  PbTe_scph4-4.scph_thermo.bz2  harm_0.01_1.POSCAR  harm_0.01_2.POSCAR  phband.in  super444_0.01.fcs  super444_0.01.xml
example/PbTe/vasp_inputs/: INCAR  KPOINTS.super  POSCAR  SPOSCAR
example/PbTe/vasp_outputs/: vasprun_1.xml  vasprun_2.xml
example/Si/: si_alm.in  si_phband.in
example/Si/reference/: DFSET_cubic  DFSET_harmonic  si222.bands  si222.dos.Z  si222.fcs  si222.kl  si222.pw.in  si222.result.Z  si222.result.bz2  si222.thermo.Z  si222.xml  si222_20.dos.bz2  si222_20.msd.bz2  si222_20.thermo.bz2  si222_cubic.fcs  si222_cubic.xml  si222_cubic.xml.bz2
example/Si_LAMMPS/: Si222.lammps  in.sw  run_all.sh
example/Si_OpenMX/: .log1  si222.bands  si222.fcs  si222.kl  si222.result  si222_cubic.fcs  si_RTA.in  si_alm.in  si_alm2.in  si_phband.in
example/Si_OpenMX/reference/: DFSET_cubic  DFSET_harmonic  RTA.in  si222.bands  si222_RTA10.kl  si222_RTA10.result.Z  si222_RTA10.result.bz2  (+6 more)
include/: constants.h  hdf5_parser.h  mathfunctions.h  memory.h  niggli_wrapper.h  progress_bar.h  version.h  xml_parser.h
include/common/: constants.h  mathfunctions.h
openmx_mod/: disp_openmx_mod.py  displace.py  extract.py  extract_openmx_mod.py
openmx_mod/si222/: run.sh  si222.pattern_ANHARM3  si222.xml  si222_cubic.xml  si222_kl.eps  si_alm.in  si_alm.log2  si_alm2.log1  si_alm2.log2
phonons/: Makefile  conductivity.cpp  conductivity.h  dynamical.cpp  dynamical.h  error.cpp  error.h  fcs_phonon.cpp  fcs_phonon.h  gruneisen.cpp  gruneisen.h  input.cpp  input.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  isotope.cpp  isotope.h  kpoint.cpp  kpoint.h  main.cpp  memory.cpp  memory.h  mpi_common.cpp  mpi_common.h  parsephon.cpp  parsephon.h  phonon_dos.cpp  phonon_dos.h  phonon_thermodynamics.cpp  phonon_thermodynamics.h  phonon_velocity.cpp  phonon_velocity.h  phonons.cpp  phonons.h  phonons.vcxproj  phonons.vcxproj.filters  pointers.h  relaxation.cpp  (+12 more)
python/: analyse_phonons.py  animate_T.py  autocor_fft.py  calc_kl.py  fitspec.py  phonon_thermo.py  plot_band.py  plot_dos.py  vdos.py
test/: README.md  test_si.py
tests/test_suite/: plot_all_results.ipynb
tools/: CMakeLists.txt  GenDisplacement.py  Makefile  README.md  analyze_phonons.cpp  analyze_phonons.h  analyze_phonons.py  analyzer.py  calcpes.py  convert_fc2.py  dfc2.cpp  dfc2.h  displace.py  extTAPP.py  extVASP.py  extract.py  fc_virtual.cpp  fc_virtual.h  genCG.py  genPOSCAR.py  interpolate_alamode.py  makedisp_qe.py  parse_fcsxml.cpp  parse_fcsxml.h  plotband.py  plotdos.py  qe2alm.cpp  qe2alm.h  scph_to_qefc.py  taylor.py
tools/analyzer/: analyze_phonons.cpp  anphonio.py  calculator.py  interpolate.py
tools/fcsio/: reader.py
tools/interface/: LAMMPS.py  OpenMX.py  QE.py  VASP.py  xTAPP.py
tools/python/: analyse_phonons.py  animate_T.py  plot_band_old.py  velspec.py
(+215 files in other folders)
